--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -41,7 +41,13 @@ jobs:
         uses: actions/setup-python@v5
         with:
           python-version: "3.11"
+      - name: Install Python dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r scripts/requirements.txt
       - name: Check accessibility (WCAG 2.1 AA compliance)
         run: yarn a11y
+      - name: Check image optimization (Performance)
+        run: yarn perf:images
       - name: Run tests
         run: yarn test
