--- a/content/authors.yaml
+++ b/content/authors.yaml
@@ -4,33 +4,33 @@ authors:
     position: Founder and Managing Director
     company: Travelping GmbH
     socialLink: https://linkedin.com/in/holger-winkelamnn
-    avatar: '/assets/avatars/holger-winkelmann.jpeg'
+    avatar: '/assets/avatars/holger-winkelmann.webp'
   lukasz-gornicki:
     name: Lukasz Gornicki
     position: HR-Manager
     company: Cennso Technologies GmbH
     email: 'info@cennso.com'
     socialLink: https://www.linkedin.com/in/lukasz-gornicki-a621914/
-    avatar: '/assets/avatars/lukasz-gornicki.jpeg'
+    avatar: '/assets/avatars/lukasz-gornicki.webp'
   timo-lindhorst:
     name: Timo Lindhorst
     position: Solution Architect
     company: Travelping GmbH
     socialLink: https://linkedin.com/in/timo-lindhorst
-    avatar: '/assets/avatars/timo-lindhorst.jpeg'
+    avatar: '/assets/avatars/timo-lindhorst.webp'
   sina-mara-friede:
     name: Sina-Mara Friede
     position: Project Manager
     company: Travelping GmbH
     socialLink: https://linkedin.com/in/sina-mara-friede
-    avatar: '/assets/avatars/sina-mara-friede.jpeg'
+    avatar: '/assets/avatars/sina-mara-friede.webp'
   frank-haupt:
     name: Frank Haupt
     position: Senior Customer Success Manager and IT Architect
     company: IBM
-    avatar: '/assets/avatars/frank-haupt.jpeg'
+    avatar: '/assets/avatars/frank-haupt.webp'
   younes-allaki:
     name: Younes Allaki
     position: CTO
     company: 1NCE GmbH
-    avatar: '/assets/avatars/younes-allaki.jpeg'
+    avatar: '/assets/avatars/younes-allaki.webp'
