--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -25,8 +25,6 @@ jobs:
         uses: actions/checkout@v4
       - name: Set up NodeJS
         uses: actions/setup-node@v4
-        with:
-          node-version: "20"
       - name: Install Yarn
         run: |-
           npm install -g yarn
@@ -51,3 +49,5 @@ jobs:
         run: yarn perf:images
       - name: Run tests
         run: yarn test
+      - name: Build production-ready website
+        run: yarn build
