--- a/.coderabbit.yaml
+++ b/.coderabbit.yaml
@@ -7,7 +7,7 @@ reviews:
   suggested_labels: false
   sequence_diagrams: false
   high_level_summary: true
-  high_level_summary_placeholder: "@coderabbitai summary"
+  high_level_summary_placeholder: '@coderabbitai summary'
   profile: chill
   auto_review:
     enabled: true
