feat: improve lighthouse throttling settings for more realistic testing

--- a/.github/workflows/lighthouse.yml
+++ b/.github/workflows/lighthouse.yml
@@ -17,7 +17,7 @@ jobs:
     name: Run Lighthouse audits
     permissions:
       contents: read
-      issues: write
+      pull-requests: write
     defaults:
       run:
         working-directory: ./
