--- a/.github/workflows/lighthouse.yml
+++ b/.github/workflows/lighthouse.yml
@@ -4,9 +4,6 @@ concurrency:
 name: Lighthouse Performance Check
 on:
   pull_request:
-    paths:
-      - "**"
-      - .github/workflows/lighthouse.yml
     types:
       - opened
       - reopened
@@ -41,7 +38,15 @@ jobs:
         run: |
           timeout 60 bash -c 'until curl -f http://localhost:3000 > /dev/null 2>&1; do sleep 1; done'
       - name: Run Lighthouse audit (Desktop + Mobile)
-        run: yarn lighthouse
+        run: |
+          # Run both desktop and mobile audits (generates JSON + HTML reports)
+          yarn lighthouse
+          
+          # Rename files for clarity
+          mv lighthouse-desktop.report.json lighthouse-results.json
+          mv lighthouse-desktop.report.html lighthouse-desktop.html
+          mv lighthouse-mobile.report.json lighthouse-mobile-results.json
+          mv lighthouse-mobile.report.html lighthouse-mobile.html
       - name: Upload Lighthouse results
         uses: actions/upload-artifact@v4
         if: always()
@@ -50,6 +55,8 @@ jobs:
           path: |
             lighthouse-results.json
             lighthouse-mobile-results.json
+            lighthouse-desktop.html
+            lighthouse-mobile.html
       - name: Check Lighthouse scores (100% required)
         if: always()
         uses: actions/github-script@v7
@@ -60,6 +67,12 @@ jobs:
             const mobileResults = JSON.parse(fs.readFileSync('./lighthouse-mobile-results.json', 'utf8'));
             
             let comment = '## 🔍 Lighthouse Audit Results\n\n';
+            
+            // Add links to detailed HTML reports
+            const runId = context.runId;
+            const repoUrl = `https://github.com/${context.repo.owner}/${context.repo.repo}`;
+            comment += `📊 **Detailed Reports**: [Desktop HTML](${repoUrl}/actions/runs/${runId}) | [Mobile HTML](${repoUrl}/actions/runs/${runId})\n`;
+            comment += `_(Download the \`lighthouse-results\` artifact from the workflow run to view full HTML reports)_\n\n`;
             
             // Desktop scores
             comment += '### 🖥️ Desktop\n\n';
@@ -92,7 +105,8 @@ jobs:
             if (allPassed) {
               comment += '✅ **All scores are 100%** - Quality gate passed!';
             } else {
-              comment += '❌ **Some scores below 100%** - Please improve Lighthouse scores to 100% on all categories (Performance, Accessibility, Best Practices, SEO).';
+              comment += '❌ **Some scores below 100%** - Please improve Lighthouse scores to 100% on all categories (Performance, Accessibility, Best Practices, SEO).\n\n';
+              comment += '💡 **View the detailed HTML reports** (in artifacts) for specific recommendations on what to fix.';
             }
             
             github.rest.issues.createComment({
