feat: unify Lighthouse CI with desktop/mobile coverage and 100% enforcement
- Unified both desktop and mobile audits to use LHCI for consistency
- Desktop: realistic throttling (40ms RTT, 10240 Kbps, 2x CPU slowdown)
- Mobile: 4G throttling (150ms RTT, 1638 Kbps, 4x CPU slowdown)
- Created reusable helper script to normalize LHCI manifest outputs
- Both configs enforce 100% scores on all categories (performance, a11y, best-practices, SEO)
- GitHub Actions workflow uploads both desktop/mobile HTML reports as artifacts
- Converted remaining <img> tags to next/image for lint compliance
- Added Lighthouse output directories to .gitignore and .prettierignore

--- a/.gitignore
+++ b/.gitignore
@@ -57,5 +57,10 @@ next-env.d.ts
 # Lighthouse artifacts
 /lighthouse-results.json
 /lighthouse-mobile-results.json
+/lighthouse-desktop.html
+/lighthouse-mobile.html
 /.lighthouse
+/.lighthouse-mobile
+/lighthouse-desktop
+/lighthouse-mobile
 /.lighthouseci
