--- a/.gitignore
+++ b/.gitignore
@@ -53,3 +53,14 @@ next-env.d.ts
 /scripts/.venv
 /scripts/__pycache__
 *.pyc
+
+# Lighthouse artifacts
+/lighthouse-results.json
+/lighthouse-mobile-results.json
+/lighthouse-desktop.html
+/lighthouse-mobile.html
+/.lighthouse
+/.lighthouse-mobile
+/lighthouse-desktop
+/lighthouse-mobile
+/.lighthouseci
