--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "build": "next build",
     "postbuild": "next-sitemap",
     "start": "next start",
+    "start:ci": "PORT=3000 HOST=0.0.0.0 node .next/standalone/server.js",
     "test": "echo 'No tests.'",
     "lint": "next lint",
     "lint:fix": "next lint --fix",
@@ -30,6 +31,9 @@
     "a11y": "yarn a11y:contrast && yarn a11y:text-alternatives && yarn a11y:media && yarn a11y:semantic && yarn a11y:distinguishable && yarn a11y:keyboard && yarn a11y:enough-time && yarn a11y:seizures && yarn a11y:navigable && yarn a11y:input-modalities && yarn a11y:readable && yarn a11y:predictable && yarn a11y:input-assistance && yarn a11y:compatible",
     "perf:images": "python3 scripts/check-image-optimization.py",
     "perf:images:optimize": "./scripts/run-python.sh optimize-images.py",
+    "lighthouse:desktop": "rm -rf .lighthouse lighthouse-desktop && lhci collect --config=.lighthouserc.js && lhci upload --config=.lighthouserc.js --target=filesystem --outputDir=./lighthouse-desktop && node scripts/process-lhci-results.js --manifestDir=lighthouse-desktop --outputJson=lighthouse-results.json --outputHtml=lighthouse-desktop.html --targetUrl=http://localhost:3000/ && lhci assert --config=.lighthouserc.js",
+    "lighthouse:mobile": "rm -rf .lighthouse .lighthouse-mobile lighthouse-mobile && lhci collect --config=lighthouse.mobile.config.js && lhci upload --config=lighthouse.mobile.config.js --target=filesystem --outputDir=./lighthouse-mobile && node scripts/process-lhci-results.js --manifestDir=lighthouse-mobile --outputJson=lighthouse-mobile-results.json --outputHtml=lighthouse-mobile.html --targetUrl=http://localhost:3000/ && lhci assert --config=lighthouse.mobile.config.js",
+    "lighthouse": "yarn lighthouse:desktop && yarn lighthouse:mobile",
     "check:all": "yarn format && yarn lint && yarn a11y && yarn perf:images && yarn build"
   },
   "dependencies": {
@@ -66,6 +70,7 @@
     "yaml": "^2.3.4"
   },
   "devDependencies": {
+    "@lhci/cli": "0.12.x",
     "@material-tailwind/react": "^2.1.8",
     "@tailwindcss/aspect-ratio": "^0.4.2",
     "@tailwindcss/forms": "^0.5.7",
@@ -82,6 +87,7 @@
     "eslint": "^8.56.0",
     "eslint-config-next": "^14.1.0",
     "eslint-config-prettier": "^9.1.0",
+    "lighthouse": "^11.4.0",
     "postcss": "^8.4.33",
     "prettier": "^3.2.4",
     "tailwind-scrollbar": "^3.0.5",
