--- a/.github/workflows/a11y-scan.yml
+++ b/.github/workflows/a11y-scan.yml
@@ -1,11 +1,9 @@
 name: Accessibility Scanner
 on:
-  pull_request_target:
-    types:
-      - opened
-      - reopened
-      - synchronize
-      - ready_for_review
+  schedule:
+    # Run weekly on Mondays at 9:00 AM UTC
+    - cron: '0 9 * * 1'
+  workflow_dispatch:  # Allow manual trigger
 
 jobs:
   accessibility_scanner:
@@ -14,25 +12,17 @@ jobs:
     permissions:
       contents: write  # Need write to push gh-cache branch
       issues: write
-      pull-requests: write
     steps:
-      - name: Wait for Vercel deployment
-        uses: patrickedqvist/wait-for-vercel-preview@06c79330064b0e6ef7a2574603b62d3c98789125 #1.3.2 release
-        id: vercel-deployment
-        with:
-          token: ${{ secrets.GITHUB_TOKEN }}
-          max_timeout: 300
-      
       - name: Run accessibility scanner
         uses: github/accessibility-scanner@dab8a8a3e066babb83677cd31fdc393c3580163e
         with:
           urls: |
-            ${{ steps.vercel-deployment.outputs.url }}
-            ${{ steps.vercel-deployment.outputs.url }}/success-stories
-            ${{ steps.vercel-deployment.outputs.url }}/contact
-            ${{ steps.vercel-deployment.outputs.url }}/about
-            ${{ steps.vercel-deployment.outputs.url }}/blog
-            ${{ steps.vercel-deployment.outputs.url }}/solutions
+            https://cennso.com
+            https://cennso.com/success-stories
+            https://cennso.com/contact
+            https://cennso.com/about
+            https://cennso.com/blog
+            https://cennso.com/solutions
           repository: cennso/cennso-website
           token: ${{ secrets.GITHUB_TOKEN }}
           cache_key: cached_results-cennso-main.json
