--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
   "dependencies": {
     "@headlessui/react": "^2.1.10",
     "@heroicons/react": "^2.1.1",
+    "@vercel/analytics": "^1.5.0",
     "daisyui": "^4.10.1",
     "framer-motion": "^10.18.0",
     "github-slugger": "^2.0.0",
