--- a/package.json
+++ b/package.json
@@ -83,6 +83,7 @@
     "@types/react-dom": "18.2.18",
     "@types/react-syntax-highlighter": "^15.5.11",
     "@typescript-eslint/eslint-plugin": "^7.7.0",
+    "@vercel/node": "^5.5.4",
     "autoprefixer": "^10.4.17",
     "eslint": "^8.56.0",
     "eslint-config-next": "^14.1.0",
