fix: resolve build issues from main merge
- Fixed lib/markdown.ts named capturing group issue (incompatible with ES5 target)
- Fixed scripts/generate-og-images type errors with ArrayBuffer/Buffer
- Ran formatter on all files
- All quality gates passing

--- a/scripts/tsconfig.json
+++ b/scripts/tsconfig.json
@@ -3,17 +3,17 @@
     "esModuleInterop": true,
     "module": "ESNext",
     "moduleResolution": "Node",
-    "jsx": "react-jsx",
+    "jsx": "react-jsx"
   },
   "ts-node": {
     "esm": true,
-    "experimentalSpecifierResolution": "node",
+    "experimentalSpecifierResolution": "node"
   },
   "include": [
     "**/*.ts",
     "*.ts",
     "generate-og-images.tsx",
-    "generate-og-images/image.tsx",
+    "generate-og-images/image.tsx"
   ],
-  "exclude": ["node_modules"],
+  "exclude": ["node_modules"]
 }
