fix: restore bodyParser config for Next.js API routes
- Added back 'export const config' with bodyParser sizeLimit
- contact-form: 1mb limit (original spec)
- job-submission-form: 2mb limit (for CV attachments)
- bodyParser config is required for Next.js API routes in /pages/api
- Research document was for standalone /api Vercel Functions (different behavior)
- Without this config, large payloads (especially CVs) would be rejected

--- a/content/contact-page.yaml
+++ b/content/contact-page.yaml
@@ -17,7 +17,7 @@ sections:
       - Contact us today, and the solution team will get back to you!
     contact:
       phone: '+49 (391) 660 98560'
-      email: info@travelping.com
+      email: info@cennso.com
     person: sina-mara-friede
 
   ibm:
