--- a/package.json
+++ b/package.json
@@ -41,7 +41,6 @@
     "@heroicons/react": "^2.1.1",
     "@vercel/analytics": "^1.5.0",
     "daisyui": "^4.10.1",
-    "framer-motion": "^10.18.0",
     "github-slugger": "^2.0.0",
     "image-size": "^1.1.1",
     "jgexml": "^0.4.4",
@@ -67,12 +66,13 @@
     "remark-gfm": "^4.0.0",
     "remark-unwrap-images": "^4.0.0",
     "sharp": "^0.33.2",
-    "swiper": "^11.1.1",
+    "swiper": "^12.0.3",
     "yaml": "^2.3.4"
   },
   "devDependencies": {
     "@lhci/cli": "0.12.x",
     "@material-tailwind/react": "^2.1.8",
+    "@next/bundle-analyzer": "^16.0.1",
     "@resvg/resvg-js": "^2.6.2",
     "@tailwindcss/forms": "^0.5.7",
     "@tailwindcss/typography": "^0.5.10",
