--- a/content/contact-page.yaml
+++ b/content/contact-page.yaml
@@ -1,6 +1,6 @@
 page:
-  title: Contact us
-  description: Bring Cennso to life with the help of our Solution and Channel Partners! They’re excited to learn about your use case and ready to help you build the perfect Cennso Network Solution.
+  title: Contact Cennso - Mobile Core Network Solutions & Support
+  description: Get in touch with Cennso's Solution and Channel Partners. Learn how we can help you build custom mobile core network solutions for your business needs.
 
 form:
   statusMessages:
