--- a/content/partners.yaml
+++ b/content/partners.yaml
@@ -1,6 +1,6 @@
 page:
-  title: Partners
-  description: Companies and organisations who cooperate with and use Cennso 
+  title: Cennso Technology Partners - Cloud & Telecom Ecosystem
+  description: Discover Cennso's ecosystem of technology partners and organizations. Collaborate with industry leaders to build innovative mobile core network solutions. 
 
 partners:
   - name: IBM Cloud
