--- a/content/success-stories-page.yaml
+++ b/content/success-stories-page.yaml
@@ -1,6 +1,6 @@
 page:
-  title: Success stories
-  description: Our mission at Cennso is to enable a new era of infrastructure management that is automated, reliable, efficient and empowers application teams to accelerate innovations.
+  title: Customer Success Stories - Cennso Mobile Core Deployments
+  description: Discover how organizations worldwide deploy Cennso mobile core. Real-world case studies of automated infrastructure and accelerated network innovation.
 
 content:
   description:
