--- a/content/404-page.yaml
+++ b/content/404-page.yaml
@@ -1,6 +1,6 @@
 page:
-  title: 404 Page not found
-  description: The page doesn't exist 
+  title: 404 Page Not Found - Cennso Mobile Core Network Solutions
+  description: The page you're looking for doesn't exist. It may have been moved or deleted. Use our navigation menu to find what you need or return to the Cennso homepage. 
 
 buttons:
   previous: Go back to previous page
