--- a/lychee.toml
+++ b/lychee.toml
@@ -41,7 +41,8 @@ exclude = [
 
 # Exclude these filesystem paths from getting checked.
 exclude_path = [
-    "specs/**"
+    "specs/**",
+    ".specify/**"
 ]
 
 # Exclude all private IPs from checking.
