--- a/lychee.toml
+++ b/lychee.toml
@@ -39,8 +39,11 @@ exclude = [
     "file:///*"
 ]
 
-# Exclude these filesystem paths from getting checked.
-exclude_path = []
+# Exclude these filesystem paths from getting checked. Values are glob patterns.
+exclude_path = [
+    "specs",
+    ".specify"
+]
 
 # Exclude all private IPs from checking.
 # Equivalent to setting `exclude_private`, `exclude_link_local`, and
