--- a/content/contact-page.yaml
+++ b/content/contact-page.yaml
@@ -2,6 +2,31 @@ page:
   title: Contact Cennso - Mobile Core Network Solutions & Support
   description: Get in touch with Cennso's Solution and Channel Partners. Learn how we can help you build custom mobile core network solutions for your business needs.
 
+contactPoint:
+  telephone: '+49 (391) 660 98560'
+  email: 'info@cennso.com'
+  contactType: 'customer service'
+  availableLanguage: 
+    - 'English'
+    - 'German'
+
+localBusiness:
+  name: 'Cennso'
+  telephone: '+49 (391) 660 98560'
+  email: 'info@cennso.com'
+  address:
+    streetAddress: 'Berliner Chaussee 88'
+    addressLocality: 'Magdeburg'
+    addressRegion: 'Saxony-Anhalt'
+    postalCode: '39114'
+    addressCountry: 'DE'
+  geo:
+    latitude: 52.1205
+    longitude: 11.6276
+  openingHours:
+    - 'Mo-Fr 09:00-17:00'
+  image: '/assets/logo.png'
+
 form:
   statusMessages:
     sending: Sending...
