fix: add missing URL config to Lighthouse CI files
The Lighthouse CI configs were trying to extend base configs via
configPath but didn't inherit the url property, causing 'No URLs
provided to collect' errors.

Changes:
- Extract URLs to shared lighthouse.urls.js file (DRY)
- Add url property to .lighthouserc.ci.js and lighthouse.mobile.config.ci.js
- Update workflow to replace URLs in shared file instead of individual configs
- All 4 Lighthouse configs now import from single source of truth

This fixes the CI failure where Lighthouse couldn't find URLs to audit.

--- a/.github/workflows/lighthouse.yml
+++ b/.github/workflows/lighthouse.yml
@@ -43,9 +43,8 @@ jobs:
           DEPLOY_URL="${{ steps.vercel-deployment.outputs.url }}"
           echo "Testing against deployment: $DEPLOY_URL"
           
-          # Replace localhost URLs in Lighthouse configs (base configs that CI configs extend)
-          sed -i "s|http://localhost:3000|$DEPLOY_URL|g" .lighthouserc.js
-          sed -i "s|http://localhost:3000|$DEPLOY_URL|g" lighthouse.mobile.config.js
+          # Replace localhost URLs in shared Lighthouse URLs file
+          sed -i "s|http://localhost:3000|$DEPLOY_URL|g" lighthouse.urls.js
       - name: Run Lighthouse audit (Desktop)
         env:
           LIGHTHOUSE_URL: ${{ steps.vercel-deployment.outputs.url }}
