--- a/content/contact-page.yaml
+++ b/content/contact-page.yaml
@@ -2,17 +2,22 @@ page:
   title: Contact Cennso - Mobile Core Network Solutions & Support
   description: Get in touch with Cennso's Solution and Channel Partners. Learn how we can help you build custom mobile core network solutions for your business needs.
 
+# Contact information for Schema.org ContactPoint
+# Telephone format: E.164 standard (no spaces/parentheses) for Schema.org structured data
+# E.164 ensures machine-readability for search engines, voice assistants, and click-to-call functionality
 contactPoint:
-  telephone: '+49 (391) 660 98560'
+  telephone: '+493916609856'
   email: 'info@cennso.com'
   contactType: 'customer service'
   availableLanguage: 
     - 'English'
     - 'German'
 
+# Local business information for Schema.org LocalBusiness
+# Telephone format: E.164 standard required by Schema.org LocalBusiness schema
 localBusiness:
   name: 'Cennso'
-  telephone: '+49 (391) 660 98560'
+  telephone: '+493916609856'
   email: 'info@cennso.com'
   address:
     streetAddress: 'Berliner Chaussee 88'
