fix: make sure all public links point to `www.cennso.com`

--- a/content/seo-config.yaml
+++ b/content/seo-config.yaml
@@ -37,7 +37,7 @@ metaGuidelines:
 schemaDefaults:
   organizationName: "Cennso Technologies GmbH"
   organizationType: "Organization"
-  url: "https://cennso.com"
+  url: "https://www.cennso.com"
   logo: "/logo.svg"
   contactEmail: "info@cennso.com"
   
