--- a/.github/workflows/tests-and-other-validation.yml
+++ b/.github/workflows/tests-and-other-validation.yml
@@ -31,10 +31,6 @@ jobs:
           yarn -v
       - name: Install dependencies
         run: yarn install --frozen-lockfile
-      - name: Check linting
-        run: yarn lint
-      - name: Check formatting
-        run: yarn format
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
@@ -43,11 +39,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r scripts/requirements.txt
-      - name: Check accessibility (WCAG 2.1 AA compliance)
-        run: yarn a11y
-      - name: Check image optimization (Performance)
-        run: yarn perf:images
+      - name: Run all quality checks
+        run: yarn check:all
       - name: Run tests
         run: yarn test
-      - name: Build production-ready website
-        run: yarn build
