--- a/package.json
+++ b/package.json
@@ -33,10 +33,10 @@
     "perf:images:optimize": "./scripts/run-python.sh optimize-images.py",
     "perf:mobile": "python3 scripts/check-mobile-performance.py",
     "perf": "yarn perf:images && yarn perf:mobile",
-    "seo:validate": "scripts/.venv/bin/python scripts/validate-seo.py",
-    "seo:meta": "scripts/.venv/bin/python scripts/validate-seo.py",
-    "seo:schema": "scripts/.venv/bin/python scripts/validate-structured-data.py",
-    "seo:links": "scripts/.venv/bin/python scripts/check-internal-links.py",
+    "seo:validate": "python3 scripts/validate-seo.py",
+    "seo:meta": "python3 scripts/validate-seo.py",
+    "seo:schema": "python3 scripts/validate-structured-data.py",
+    "seo:links": "python3 scripts/check-internal-links.py",
     "seo": "yarn seo:validate && yarn seo:schema && yarn seo:links",
     "lighthouse:desktop:ci": "lhci collect --config=.lighthouserc.ci.js && lhci upload --config=.lighthouserc.ci.js --target=filesystem --outputDir=./lighthouse-desktop && node scripts/process-lhci-results.js --manifestDir=lighthouse-desktop --outputJson=lighthouse-results.json --outputHtml=lighthouse-desktop.html --targetUrl=${LIGHTHOUSE_URL:-http://localhost:3000/} && lhci assert --config=.lighthouserc.ci.js",
     "lighthouse:mobile:ci": "lhci collect --config=lighthouse.mobile.config.ci.js && lhci upload --config=lighthouse.mobile.config.ci.js --target=filesystem --outputDir=./lighthouse-mobile && node scripts/process-lhci-results.js --manifestDir=lighthouse-mobile --outputJson=lighthouse-mobile-results.json --outputHtml=lighthouse-mobile.html --targetUrl=${LIGHTHOUSE_URL:-http://localhost:3000/} && lhci assert --config=lighthouse.mobile.config.ci.js",
