--- a/.github/workflows/tests-and-other-validation.yml
+++ b/.github/workflows/tests-and-other-validation.yml
@@ -35,10 +35,11 @@ jobs:
         uses: actions/setup-python@v5
         with:
           python-version: "3.11"
-      - name: Install Python dependencies
+      - name: Create Python virtual environment and install dependencies
         run: |
-          python -m pip install --upgrade pip
-          pip install -r scripts/requirements.txt
+          python -m venv scripts/.venv
+          scripts/.venv/bin/python -m pip install --upgrade pip
+          scripts/.venv/bin/pip install -r scripts/requirements.txt
       - name: Run all quality checks
         run: yarn check:all
       - name: Run tests
