ci: add more structured data ci checks

--- a/.github/workflows/tests-and-other-validation.yml
+++ b/.github/workflows/tests-and-other-validation.yml
@@ -6,7 +6,7 @@ on:
   pull_request:
     paths:
       - "**"
-      - .github/workflows/nodejs.yml
+      - tests-and-other-validation.yml
     types:
       - opened
       - reopened
